After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733321 - Tooltips disappear when a new GtkMenu is created
Tooltips disappear when a new GtkMenu is created
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkMenu
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-17 14:54 UTC by Jurica Bradaric
Modified: 2014-07-21 16:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A minimal example (1.18 KB, text/plain)
2014-07-17 14:54 UTC, Jurica Bradaric
Details

Description Jurica Bradaric 2014-07-17 14:54:16 UTC
Created attachment 281005 [details]
A minimal example

If a tooltip is visible and a new GtkMenu widget is created, the tooltip will
disappear.  The menu doesn't even need to be visible, the tooltip disappears
immediately after gtk_menu_new() is called.

A new toplevel window is created in the gtk_menu_new function and the menu is
added as a child into that window.  After further investigation, it turns out
that the tooltip window disappears when a child is added into a GtkWindow.

I have attached a minimal example which shows this behavior.